--- a/index.html
+++ b/index.html
@@ -113,39 +113,42 @@
                 <div class="container">
                     <div class="flex row align-center">
                         <div class="col title">
-                            <h2>What Our Clients Say About Us</h2>
+                            <h2>What Our Clients<br> Say About Us</h2>
                             <a href="" class="video_link">Watch Video</a>
                         </div>
                         <div class="col col-slider">
                             <div class="slider">
                                 <div class="m-slides">
                                  <div class="slides active">
-                                     <div class="row">
-                                        <img src="assets/images/quote.png" alt="">
-                                     </div>
-                                     <h3>It is a long established fact that a reader will be distracted by the readable content. </h3>
-                                     <div class="row text-right">
-                                        <img src="assets/images/quote-01.png" alt="">
-                                     </div>
-                                     <div class="row text-right info">
-                                         <span>Aleena James</span>
-                                         <small>Modeling Artist</small>
-                                     </div>
-                                 </div>
-                                 <!-- <div class="slides ">
-                                     <h3>It is a long established fact that a reader will be distracted by the readable content. </h3>
-                                     <div class="">
-                                         <span>Aleena James</span>
-                                         <small>Modeling Artist</small>
+                                     <div class="items">
+                                        <div class="row">
+                                            <img src="assets/images/quote.png" alt="">
+                                         </div>
+                                         <h3>It is a long established fact that a reader will be distracted by the readable content. </h3>
+                                         <div class="row text-right">
+                                            <img src="assets/images/quote-01.png" alt="">
+                                         </div>
+                                         <div class="row text-right info">
+                                             <span>Aleena James</span>
+                                             <small>Modeling Artist</small>
+                                         </div>
                                      </div>
                                  </div>
-                                 <div class="slides">
-                                     <h3>It is a long established fact that a reader will be distracted by the readable content. </h3>
-                                     <div class="">
-                                         <span>Aleena James</span>
-                                         <small>Modeling Artist</small>
+                                 <div class="slides ">
+                                     <div class="items">
+                                        <div class="row">
+                                            <img src="assets/images/quote.png" alt="">
+                                         </div>
+                                         <h3>It is a long established fact that a reader will be distracted by the readable content. </h3>
+                                         <div class="row text-right">
+                                            <img src="assets/images/quote-01.png" alt="">
+                                         </div>
+                                         <div class="row text-right info">
+                                             <span>Aleena </span>
+                                             <small> Artist</small>
+                                         </div>
                                      </div>
-                                 </div> -->
+                                 </div>
                             </div>
                         </div>
                     </div>
@@ -230,14 +233,14 @@
                 <div class="row flex">
                     <div class="col-left">
                         <div class="title">
-                            <h1>It’s Glow Time.</h1>
+                            <h1>It’s Glow<br> Time.</h1>
                         </div>
                         <small>2020 KALOSE LLC. Legal.</small>
                     </div>
                     <nav>
                         <ul>
                             <li><a href="">About Us </a>
-                                <ul>
+                                <ul class="sub">
                                     <li><a href="">Co-livingg</a></li>
                                     <li><a href="">FAQs</a></li>
                                     <li><a href="">Careers</a></li>
@@ -248,13 +251,15 @@
                                 </ul>
                             </li>
                         </ul>
-                        <ul>
+                        <ul class="address">
                             <li><a href="">Get in touch<br></a>
-                                <ul style="display:block">
-                                    <li style="color:#fff">KALOSE Inc,
-                                        Century Park East Suite 803,
-                                        Los Angeles,
-                                        +44 (0) 207 543 5478</li>
+                                <ul style="display:block" class="sub">
+                                    <li style="color:#fff"><address>
+                                        KALOSE Inc,<br>
+                                        Century Park East Suite 803,<br>
+                                        Los Angeles,<br>
+                                        +44 (0) 207 543 5478
+                                    </address></li>
                                 </ul>
                             </li>
                         </ul>
